<resources>

    <string name="app_name">微信</string>

    <string name="toolbar_add">添加</string>
    <string name="toolbar_search">搜索</string>
    <string name="menu_add_friend">添加朋友</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_scan">扫一扫</string>
    <string name="menu_feedback">问题反馈</string>

    <string name="tab_weixin">微信</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>


</resources>
